ci/cd fix cover

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -53,4 +53,4 @@ jobs:
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         run: |
-          goveralls -coverprofile=coverage.out -service=github
+          goveralls -coverprofile=coverage.out -service=github -repotoken "${COVERALLS_TOKEN}"
