--- a/.traefik.yml
+++ b/.traefik.yml
@@ -8,3 +8,4 @@ summary: 'Pass the browser cors preflight with response status 204 for Method OP
 testData:
   Code: 204
   Method: 'OPTIONS'
+  Debug: true
